# messenger

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
documentation/: 01-introduction-architecture.md  03-env-database.md  05-backend-api.md  07-business-logic-security.md  09-websocket-frontend.md  11-12-13-docker-nginx-deploy.md  14-15-16-backup-cicd-testing.md  17-18-19-monitoring-troubleshooting-appendix.md  README.md  TODOC_STRUCTURE.md  api.md  architecture-overview.md  architecture.md  database.md  deploy-plan.md  deployment.md  development.md  nginx-host.md  security.md
documentation/api/: overview.md
documentation/architecture/: database.md
documentation/development/: overview.md
documentation/security/: overview.md
documentation/setup/: overview.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  router.js  style.css
frontend/views/: AuthView.vue  ChatView.vue
hooks/: post-merge
messenger/: __init__.py  config.py  database.py  main.py
messenger/api/: __init__.py  auth.py  chat.py  files.py  users.py
messenger/models/: __init__.py  chat.py  chat_member.py  invite_code.py  message.py  user.py
messenger/schemas/: __init__.py  auth.py  chat.py
messenger/security/: __init__.py  (+1 more)
scripts/: backup.sh  cron-backup.sh  deploy.sh  init.sh  restore.sh
tests/: conftest.py  test_auth.py  test_chat_api.py  test_health.py  test_models.py  test_security.py  test_users.py
(+8 files in other folders)
